[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Pause/Pause.gd" type="Script" id=1]
[ext_resource path="res://UI/AnimatedButton/AnimatedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/yoster.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/Pause/Blur.gdshader" type="Shader" id=4]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=5]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )
shader_param/blur_amount = 2.0

[sub_resource type="DynamicFont" id=4]
size = 96
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 28
outline_size = 2
outline_color = Color( 0.87451, 0.878431, 0.909804, 1 )
font_data = ExtResource( 3 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Dim" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0941176, 0.180392, 0.392157 )

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )

[node name="Continue" parent="Content" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -216.0
margin_right = 160.0
margin_bottom = -152.0
text = "Continue"

[node name="Menu" parent="Content" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -104.0
margin_right = 192.0
margin_bottom = -40.0
focus_mode = 2
text = "Back to Menu"

[node name="Pause" type="Label" parent="Content"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -184.0
margin_top = 48.0
margin_right = 184.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 4 )
text = "Paused"
align = 1
valign = 1

[node name="Cheats" parent="Content" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -264.0
margin_top = 16.0
margin_right = -56.0
focus_mode = 2
custom_fonts/font = SubResource( 17 )
text = "Cheats: Off"

[node name="Cheat Info" type="Label" parent="Content"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_top = 80.0
margin_right = -16.0
margin_bottom = 293.0
custom_fonts/font = ExtResource( 5 )
text = "Turn this on if your browser doesn't save your progress"
align = 1
autowrap = true

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="Content/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="Content/Menu" to="." method="_on_Menu_button_down"]
[connection signal="button_down" from="Content/Cheats" to="." method="_on_Cheats_button_down"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
